Testing dan perubahan database
bug di fxml dan junit (Modul-info perlu dipindah)