@@ -1,7 +1,10 @@
 package com.example.bukutelepondigital;
 
 import org.junit.jupiter.api.*;
+
+import java.sql.Connection;
 import java.sql.SQLException;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -12,76 +15,82 @@ public class ContactDAOTest {
 
     @BeforeEach
     public void setUp() {
-        // Inisialisasi objek ContactDAO sebelum setiap test dijalankan
-        contactDAO = new ContactDAO();
+        contactDAO = new ContactDAO(); // Membuat instance baru dari ContactDAO
     }
 
-    @Test
-    public void testAddContact() throws SQLException {
-        // Membuat objek Contact untuk ditambahkan
-        Contact contact = new Contact(0, "John Doe", "path/to/photo.jpg", List.of("1234567890", "0987654321"));
+    @BeforeEach
+    void clearTable() throws SQLException {
+        // Menghapus data di tabel contacts sebelum setiap pengujian
+        try (Connection conn = DatabaseConnection.getConnection();
+             var stmt = conn.createStatement()) {
+            stmt.executeUpdate("DELETE FROM contacts");
+        }
+    }
 
-        // Menambahkan kontak menggunakan ContactDAO
+    // 1. Pengujian Create (Menambahkan kontak baru)
+    @Test
+    void testCreateContact() throws SQLException {
+        Contact contact = new Contact(0, "John Doe", "path/to/photo.jpg", Arrays.asList("1234567890"));
         contactDAO.addContact(contact);
 
-        // Mengecek apakah kontak berhasil ditambahkan
         List<Contact> contacts = contactDAO.getAllContacts();
-        assertTrue(contacts.stream().anyMatch(c -> c.getName().equals("John Doe")));
+        assertEquals(1, contacts.size()); // Pastikan ada 1 kontak
+
+        Contact retrievedContact = contacts.get(0);
+        assertEquals("John Doe", retrievedContact.getName());
+        assertEquals("path/to/photo.jpg", retrievedContact.getPhotoPath());
+        assertEquals(Arrays.asList("1234567890"), retrievedContact.getPhoneNumbers());
     }
 
+    // 2. Pengujian Read (Mengambil semua kontak)
     @Test
-    public void testGetAllContacts() throws SQLException {
-        // Menambahkan kontak terlebih dahulu
-        Contact contact1 = new Contact(0, "Alice", "path/to/alice.jpg", List.of("111222333"));
-        Contact contact2 = new Contact(0, "Bob", "path/to/bob.jpg", List.of("444555666"));
-        contactDAO.addContact(contact1);
-        contactDAO.addContact(contact2);
+    void testReadAllContacts() throws SQLException {
+        contactDAO.addContact(new Contact(0, "Alice", "photo1.jpg", Arrays.asList("1111111111")));
+        contactDAO.addContact(new Contact(0, "Bob", "photo2.jpg", Arrays.asList("2222222222")));
 
-        // Mengambil semua kontak
         List<Contact> contacts = contactDAO.getAllContacts();
+        assertEquals(2, contacts.size()); // Pastikan ada 2 kontak
 
-        // Mengecek apakah daftar kontak memiliki dua kontak yang ditambahkan
-        assertEquals(2, contacts.size());
+        assertEquals("Alice", contacts.get(0).getName());
+        assertEquals("Bob", contacts.get(1).getName());
     }
 
+    // 3. Pengujian Update (Memperbarui data kontak)
     @Test
-    public void testUpdateContact() throws SQLException {
-        // Menambahkan kontak yang akan diperbarui
-        Contact contact = new Contact(0, "Charlie", "path/to/charlie.jpg", List.of("777888999"));
+    void testUpdateContact() throws SQLException {
+        Contact contact = new Contact(0, "Charlie", "photo.jpg", Arrays.asList("3333333333"));
         contactDAO.addContact(contact);
 
-        // Mengubah nama dan nomor telepon
-        contact.setName("Charles");
-        contact.setPhoneNumbers(List.of("999888777"));
-
-        // Memperbarui kontak
-        contactDAO.updateContact(contact);
-
-        // Mengambil kontak yang sudah diperbarui
+        // Ambil kontak dan perbarui nama dan nomor telepon
         List<Contact> contacts = contactDAO.getAllContacts();
-        assertTrue(contacts.stream().anyMatch(c -> c.getName().equals("Charles")));
+        Contact contactToUpdate = contacts.get(0);
+        contactToUpdate.setName("Charlie Updated");
+        contactToUpdate.setPhoneNumbers(Arrays.asList("4444444444"));
+
+        contactDAO.updateContact(contactToUpdate);
+
+        // Verifikasi pembaruan
+        List<Contact> updatedContacts = contactDAO.getAllContacts();
+        Contact updatedContact = updatedContacts.get(0);
+        assertEquals("Charlie Updated", updatedContact.getName());
+        assertEquals(Arrays.asList("4444444444"), updatedContact.getPhoneNumbers());
     }
 
+    // 4. Pengujian Delete (Menghapus kontak)
     @Test
-    public void testDeleteContact() throws SQLException {
-        // Menambahkan kontak untuk dihapus
-        Contact contact = new Contact(0, "David", "path/to/david.jpg", List.of("555666777"));
+    void testDeleteContact() throws SQLException {
+        Contact contact = new Contact(0, "Dave", "photo.jpg", Arrays.asList("5555555555"));
         contactDAO.addContact(contact);
 
-        // Mengambil ID kontak pertama
-        int contactId = contact.getId();
-
-        // Menghapus kontak
-        contactDAO.deleteContact(contactId);
-
-        // Mengecek apakah kontak sudah dihapus
+        // Pastikan ada 1 kontak sebelum dihapus
         List<Contact> contacts = contactDAO.getAllContacts();
-        assertFalse(contacts.stream().anyMatch(c -> c.getId() == contactId));
-    }
+        assertEquals(1, contacts.size());
 
-    @AfterEach
-    public void tearDown() {
-        // Bersihkan atau reset data setelah pengujian (misalnya menghapus kontak dari database)
+        // Hapus kontak
+        contactDAO.deleteContact(contacts.get(0).getId());
+
+        // Pastikan tabel kosong setelah penghapusan
+        List<Contact> contactsAfterDeletion = contactDAO.getAllContacts();
+        assertTrue(contactsAfterDeletion.isEmpty());
     }
 }
-
